Fix broken style selector

--- a/scss/user_index_page.scss
+++ b/scss/user_index_page.scss
@@ -1,7 +1,7 @@
 @import "_colors.scss";
 @import "compass/css3/border-radius";
 
-.user_list_page {
+.user_index_page {
     #guts {
 
         &:after {
